# ChangeLog for games-arcade/supertux
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/supertux/ChangeLog,v 1.33 2009/02/23 01:02:56 mr_bones_ Exp $

  28 Nov 2009; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> supertux-9999.ebuild,
  -files/supertux-cmake.patch:
  Removed patch: installation dirs are settable thanks to r6122 by tuxdev

  14 Nov 2009; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> files/supertux-cmake.patch:
  Updated patch for supertux SVN r5936.

  02 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  supertux-9999.ebuild, +files/supertux-cmake.patch:
  Fixed installation paths.


  21 Apr 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  supertux-9999.ebuild:
  set SLOT=1 because this can coexist with supertux-0.1*

*supertux-9999 (20 Apr 2009)

  20 Apr 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  -supertux-0.1.3.ebuild, -files/supertux-0.1.3-gcc41.patch, -files/supertux-0.1.3-ndebug.patch, +supertux-9999.ebuild:
  Created a live ebuild for Supertux from the existing one

  23 Feb 2009; Michael Sterrett <mr_bones_@gentoo.org>
  supertux-0.1.3.ebuild:
  remove GAMES_USE_SDL; now handled by use-based deps

  22 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  supertux-0.1.3.ebuild:
  transition to the non-no* use flags in libsdl

  09 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  supertux-0.1.3.ebuild:
  EAPI=2; add use-based deps

  26 Feb 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +files/supertux-0.1.3-ndebug.patch, supertux-0.1.3.ebuild:
  ndebug patch from Guenther Brunthaler via bug #211322

  09 Apr 2007; Peter Weller <welp@gentoo.org> supertux-0.1.3.ebuild:
  Keyworded ~x86-fbsd wrt bug 173405

  07 Feb 2007; Tristan Heaven <nyhm@gentoo.org> supertux-0.1.3.ebuild:
  Use mirror://berlios

  23 Dec 2006; Tony Vroon <chainsaw@gentoo.org> supertux-0.1.3.ebuild: