@@ -1,3 +1,3 @@
-EBUILD supertux-9999.ebuild 1331 RMD160 d379ed8b35465d8ee3ce457236614d5911af6c47 SHA1 e6c21119e4cff90a9ba69b21be75e99befbfa489 SHA256 09022fde0c543bea1284e00d912c48980943b865226e61eb6899c96cbe0a22e1
+EBUILD supertux-9999.ebuild 1386 RMD160 fd2f7236c97802d48fba7f0977685b1720a2aa77 SHA1 7ac0d6e59590d5f82c84a7973787712c255da1ce SHA256 b75d9dba7e7145bfaef9dbf6b7c02e3fbf695d204514aacb8f8d9b0deae09af4
 MISC ChangeLog 5167 RMD160 6ba0f2f827f86c45ec78f35f8e13fdc877df736f SHA1 17226210fe9ddb5a4bc95674b9b6801e596bdb81 SHA256 7321a3ce4703a45726f8302261793ba32ea07af7227f668d0ec1f717a6464c1a
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
