@@ -1,9 +1,10 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/games-arcade/supertux/supertux-0.1.3.ebuild,v 1.14 2009/02/23 01:02:56 mr_bones_ Exp $
 
 EAPI=2
-inherit subversion cmake-utils eutils games
+
+inherit cmake-utils eutils games subversion
 
 DESCRIPTION="A game similar to Super Mario Bros."
 HOMEPAGE="http://super-tux.sourceforge.net"
@@ -17,26 +18,25 @@ SLOT="1"
 KEYWORDS=""
 IUSE="opengl curl debug"
 
-RDEPEND="media-libs/libsdl[joystick]
-	media-libs/sdl-image[png,jpeg]
+RDEPEND="dev-games/physfs
+	media-libs/libsdl[joystick]
 	media-libs/libvorbis
-	dev-games/physfs
 	media-libs/openal
-	x11-libs/libXt
-	opengl? ( virtual/opengl )
+	media-libs/sdl-image[png,jpeg]
+	opengl? ( media-libs/glew
+		virtual/opengl )
 	curl? ( net-misc/curl )"
 
-#supertux's CMakeLists.txt needs the svnversion command
+# supertux's CMakeLists.txt needs the svnversion command
+# boost templates are used
 DEPEND="${RDEPEND}
+	dev-libs/boost
 	dev-util/cmake
 	dev-util/subversion"
 
-src_unpack() {
-	subversion_src_unpack
-}
-
 src_configure() {
 	local mycmakeargs="-DWERROR=OFF
+			 -DINSTALL_SUBDIR_SHARE=share/games/supertux2
 			 -DINSTALL_SUBDIR_BIN=games/bin
 			 -DINSTALL_SUBDIR_DOC=share/doc/${P}
 			 $(cmake-utils_use_enable opengl OPENGL)
