@@ -1,6 +1,11 @@
 # ChangeLog for games-arcade/supertux
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/games-arcade/supertux/ChangeLog,v 1.33 2009/02/23 01:02:56 mr_bones_ Exp $
+
+  14 Jan 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> supertux-9999.ebuild:
+  Fixed shared game directory path. Added deps for boost and glew. Some
+  cleanup.
 
   28 Nov 2009; Nathan Phillip Brink (ohnobinki)
   <ohnobinki@ohnopublishing.net> supertux-9999.ebuild,
